fixed manualy