@@ -276,7 +276,7 @@ public class ArgumentsMarshalTest extends TestCase {
             return Integer.class;
         }
         public Object toNative() {
-            return new Integer(value);
+            return Integer.valueOf(value);
         }
     }
     protected NativeMappedLibrary loadNativeMappedLibrary() {
